--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block mytitle %}{% endblock mytitle %}</title>
+    <title>{% block title %}Default{% endblock title %}</title>
 </head>
 <body>
-    
+        {% block content %}
+        {% endblock content %}
+
+
+        {% block aftercontent %}{% endblock aftercontent %}
+
+    <footer>
+        <strong>2024 Bishworaj Poudel</strong>
+    </footer>
+
+
 </body>
 </html>
