--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,3 +1,18 @@
 {% extends "blog/base.html" %}
 
-{% block mytitle %}Welcome to Homepage{% endblock mytitle %}
+{% block title %}
+Welcome to My Website
+{% endblock title %}
+
+{% block content %}
+<h1>Welcome to Bishworaj Blog </h1>
+<ul>
+{% for post in posts %}
+<li><a href= "{% url "single" post.id %}">{{post.title}}</a></li>
+{% endfor %}
+</ul>
+
+  
+{% endblock content %}
+
+
