--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -1,3 +1,12 @@
 {% extends "blog/base.html" %}
 
-{% block mytitle %}Post{% endblock mytitle %}
+{% block title %}Single Post{% endblock title %}
+
+{% block content %}
+<h1>{{post.title}}</h1>
+<p>
+   {{post.content}}
+</p>
+<a href="{% url 'homepage' %}">Go to Home</a>
+{% endblock content %}
+
